public_html/css/contact.css
@media only screen and (max-width: 310px) {
  html {
    font-size: 0.8em;
  }
}

/* background shapes */
#background-overflow-stop {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  position: absolute;
}

#background-container {
  height: 100vw;
  position: absolute;
  width: 100vw;
  z-index: -1;
}

#background-segment {
  background-image: radial-gradient(
    closest-side,
    var(--color-primary-lightbackground),
    var(--color-primary-ultralight)
  );
  border-radius: 50%;
  height: 200%;
  left: 0;
  position: absolute;
  top: calc(-100% + 56px);
  width: 200%;
}

@media only screen and (min-width: 450px) {
  #background-segment {
    height: 150%;
    left: 15%;
    top: calc(-75% + 56px);
    width: 150%;
  }
}

@media only screen and (min-width: 650px) {
  #background-segment {
    height: 90%;
    left: 20%;
    top: calc(-25% + 56px);
    width: 90%;
  }
}
/* end of background shapes */

/* text & text alignment styling */
#contact-text {
  display: block;
  font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.3rem;
  letter-spacing: 0.7px;
  line-height: 1.4;
  padding-left: 6px;
  padding-right: 12px;
  text-align: right;
}

#contact-text h1 {
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 16px 12px 12px 28px;
  text-align: left;
}

#shaper {
  float: left;
  height: 100vw;
  shape-outside: polygon(
    0% 0%,
    0 100%,
    100% 100%,
    100% 97%,
    75% 94%,
    50% 84%,
    14% 50%,
    4% 25%
  );
  width: calc(100vw - 24px);
}

@media only screen and (min-width: 450px) {
  #shaper {
    height: 75vw;
    width: calc(75vw - 24px);
  }
  #contact-text {
    padding-left: 17vw;
  }
}

@media only screen and (min-width: 650px) {
  #contact-text {
    padding-left: 22vw;
    padding-right: 40px;
  }
  #contact-text h1 {
    padding-left: 110px;
  }
  #shaper {
    height: 45vw;
    shape-outside: polygon(
      0% 0%,
      0 100%,
      95% 100%,
      75% 94%,
      50% 84%,
      14% 50%,
      4% 25%,
      20% 0%
    );
    width: 10vw;
  }
}

@media only screen and (min-width: 650px) {
  #contact-text {
    padding-left: 25vw;
    padding-right: 80px;
  }
}

@media only screen and (min-width: 650px) {
  #shaper {
    height: 25vw;
    shape-outside: polygon(0% 0%, 0 100%, 20% 100%, 0% 70%, 20% 0);
    width: 10vw;
  }
}

@media only screen and (min-width: 1000px) {
  #contact-text h1 {
    font-size: 2rem;
  }
  #contact-text {
    font-size: 1.7rem;
  }
}
/* end of text alignment styling */

/* icon styling */
#contact-icons {
  display: flex;
  justify-content: space-around;
  min-height: 240px;
  padding: 4px 8px 24px 8px;
  position: absolute;
  top: max(75vw, 270px);
  width: 100%;
  z-index: -1;
}

div.icon-holder {
  flex: 0 1 96px;
}

div.icon {
  background-color: var(--color-secondary-dark);
  border-radius: 50%;
  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
  height: calc(96px / (1 + (0.3 * var(--nth-child))));
  margin: auto;
  margin-top: calc((44vw / (1 + 0.75 * var(--nth-child))) * var(--nth-child));
  padding: 16px;
  width: calc(96px / (1 + (0.3 * var(--nth-child))));
}

div.icon::before {
  height: auto;
  width: 100%;
}

#email-icon {
  --nth-child: 0;
}
#email-icon::before {
  content: url(../assets/icons/ic_mail.svg);
}

#fb-icon {
  --nth-child: 1;
  padding-top: 17px;
}
#fb-icon::before {
  content: url(../assets/icons/ic_facebook_dark.svg);
}

#linkedin-icon {
  --nth-child: 2;
  padding-top: 17px;
}
#linkedin-icon::before {
  content: url(../assets/icons/ic_linkedin.svg);
}

@media only screen and (min-width: 450px) {
  #contact-icons {
    top: max(56vw, 270px);
  }
  div.icon {
    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.6));
    margin-top: calc((40vw / (1 + 0.75 * var(--nth-child))) * var(--nth-child));
  }
}

@media only screen and (min-width: 650px) {
  #contact-icons {
    justify-content: space-evenly;
    min-height: auto;
    top: max(320px, 30vw);
  }
  div.icon {
    filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.6));
    height: 100px;
    margin: auto;
    padding: 24px;
    width: 100px;
  }
  #linkedin-icon,
  #fb-icon {
    padding-top: 25px;
  }
}
/* end of icon styling */

